# QuantaForge

./: .gitignore  LICENSE  README.md  market_risk_protection_backtest.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_ozempic.py  test_readme.py
.github/workflows/: ci.yml
examples/: AdaptiveSectorRotationStrategy.py  CommoditiesRollYieldStrategy.py  DivisersifiedIncomeStrategy.py  DynamicPortfolioOptimization.py  FixedIncomeYieldStrategy.py  MarketRiskProtectionStrategy.py  MeanReversionStrategy.py  Momemtum.py  MomentumStrategy.py  OzempicStrategy.py  VolatiltyBreakoutStrategy.py  __init__.py  example_backtest.py  example_strategy.py  intro_example.py
quantaforge/: __init__.py  api.py  backtest.py  backtest_new.py  brokers.py  condition.py  data_feed.py  generics.py  indicator.py  indicators.py  live_trading.py  model.py  models.py  optimizer.py  order.py  order_execution.py  performance_metrics.py  portfolio.py  position.py  report.py  risk_management.py  riskmanagement.py  signal.py  signals.py  simulator.py  strategy.py  strategymanager.py  trading.py
quantaforge/cython_modules/: cy_portfolio.c  cy_strategy.c  cy_strategy.pyx
quantaforge/events/: adaptive.py  detection_nlp.py  event_accuracy_eval.py  event_api.py  event_chain.py  event_features.py  event_types.py  events_impact.py  importance.py  nlp.py  realtime.py
quantaforge/optimization/: api.py  (+3 more)
tests/: test_backtest.py  test_fixed_income.py  test_mean_reversion.py  test_momentum_strategy.py  test_portfolio.py  test_strategy.py  test_trading_engine.py  test_volatility_breakout.py
(+15 files in other folders)
